# my-agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  AI_SKILLS.md  ARCHITECTURE.md  AUDIT_2026.md  AUDIT_PRODUCTION_2026.md  AUDIT_PRODUCT_2026.md  AUDIT_REPORT.md  CHANGELOG.md  COCKPIT.md  COMPARISON_REPORT.md  CONTEXT.md  CONTRIBUTING.md  Caddyfile  DEMO.md  DEPLOYMENT.md  Dockerfile  HANDOFF.md  INVESTOR.md  PROJECT.md  PROJECT_GUIDE.md  README.md  ROADMAP_90_DAYS.md  SECURITY.md  SERVER.md  SESSION_HISTORY.md  SKILL_AUDIT_REPORT.md  SPOTLIGHT.md  STATE.md  TROUBLES.md  TROUBLESHOOTING.md  WINDOWS_LAUNCH.md  agent.bat  agent.py  agent.sh  agent_backup.py  agent_styled.py  alembic.ini  (+11 more)
.cursor/rules/: stack.mdc
.github/workflows/: ci.yml  secrets-check.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
agents/: registry.json
alembic/: env.py
alembic/versions/: 001_init.py  002_workflows.py  003_phase2_features.py  004_teams.py  005_unified_schema.py
cli/: tui.py
config/: agent.json  mcp_clients.json  mcp_servers.json  models.yaml
config/roles/: default.md
core/: agent_store.py  api_keys.py  async_utils.py  auth.py  auto_agent_factory.py  builder.py  config.py  configurator.py  context_compressor.py  db_manager.py  db_migrate.py  docker_sandbox.py  event_bus.py  feedback.py  integration_credentials.py  integrations_registry.py  iteration_budget.py  kimi_provider.py  llm_gateway.py  logger.py  logging_setup.py  mcp_client_manager.py  mcp_manager.py  memory_manager.py  models.py  orchestrator.py  pg_state.py  plugin_manager.py  redis_client.py  retry_utils.py  runtime.py  scheduler_manager.py  session_cache.py  session_store.py  skill_cache.py  skill_loader.py  state_db.py  sub_agents.py  tool_registry.py  user_manager.py  (+2 more)
core/billing/: plans.py
core/eval/: __init__.py  benchmarks.py  prompt_eval.py  quality_metrics.py
core/teams/: __init__.py  permissions.py  store.py
core/usage/: __init__.py  tracker.py
core/workflow/: __init__.py  executor.py  expressions.py  models.py  registry.py  run_queue.py  state.py  store.py  template_demo.py  (+1 more)
deploy/: .env.example  Caddyfile.prod  README.md  docker-compose.prod.yml  fly.toml  my-agent.service  railway.json  render.yaml
docs/: README.md
graphify-out/: GRAPH_REPORT.md  graph.html
scripts/: check-secrets.sh  create_presentation.py  create_presentation_fix.py  entrypoint.sh  generate_demo_artifact.py  generate_report.py  generate_report_llm.py  migrate_sqlite_to_postgres.py  migrate_state_to_agent.py  migrate_users_db.py  seed_workflow_templates.py  test_api_ux.py  test_ollama_real.py  test_ollama_ru.py  translate_report.py
tasks/: api-test.yaml  code-review.yaml  deep-research.yaml  research-course.yaml
tests/: conftest.py  test_a2a_queue.py  test_all.py  test_async.py  test_async_utils.py  test_browser.py  test_builder.py  test_cli_tui.py  test_code_tools.py  test_collaboration.py  test_db_manager.py  test_demo_flow.py  test_docker.py  test_dod_closure.py  test_eval.py  test_feedback.py  test_file_tools.py  test_gateway_fallback.py  test_google_auth.py  test_integration.py  test_integration_new_features.py  test_kimi_provider.py  test_llm_gateway_fallback.py  test_logging_redaction.py  test_marketplace.py  test_mcp_client.py  test_mcp_server.py  test_messaging.py  test_model_profiles.py  test_new_skills.py  test_ollama_real.py  test_production.py  test_production_hardening.py  test_production_v34.py  test_real_api.py  test_redis_cache.py  test_resolve_agent_model.py  test_run_queue_recovery.py  test_runtime_parallel.py  test_scheduler.py  (+20 more)
tools/: __init__.py  api_connector.py  audio_transcription_tools.py  auto_agents_tools.py  code_tools.py  data_tools.py  deep_search_tools.py  docs_tools.py  email_tools.py  file_tools.py  git_integration_tools.py  image_generation_tools.py  mcp_client.py  ocr_tools.py  rss_news_tools.py  slides_tools.py  social_media_tools.py  sql_db_tools.py  translation_tools.py  vector_db.py  vector_tools.py  web_tools.py
web/: a2a_server.py  auth_router.py  demo_router.py  leads_router.py  mcp_server.py  security.py  server.py  sessions_router.py  teams_router.py  usage_router.py  workflow_router.py
website/: BRAND.md  README-DEPRECATED.md  demo.html  demo.js  index.html  login.css  main.js  marketing.css  showcase.css  showcase.html  showcase.js  style.css
(+225 files in other folders)
