[project]
name = "my-agent"
version = "3.5.3"
description = "Modular AI Agent System with Universal Assistant"
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "AI Assistant"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "litellm>=1.60.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "duckduckgo-search>=7.0",
    "beautifulsoup4>=4.12",
    "requests>=2.31",
    "jinja2>=3.1",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "pydantic>=2.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "plotly>=5.18",
    "openpyxl>=3.1",
    "python-pptx>=0.6.21",
    "python-docx>=1.1.0",
    "reportlab>=4.0",
    "chromadb>=1.5.0",
    "langdetect>=1.0.9",
    "python-jose[cryptography]>=3.5.0",
    "bcrypt>=4.0.0,<5.0",
    "slowapi>=0.1.9",
    "asyncpg>=0.31.0",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.0.0",
    "mcp>=1.0.0",
    "docker>=7.0",
    "pytesseract>=0.3.0",
    "pdf2image>=1.17.0",
    "feedparser>=6.0.0",
    "gitpython>=3.1.0",
    "PyGithub>=2.0.0",
    "tweepy>=4.14.0",
    "httpx>=0.28.0",
    "redis>=5.0",
    "prometheus-client>=0.20",
    "pillow>=10.0",
    "apscheduler>=3.10",
    "python-telegram-bot>=21.0",
    "discord.py>=2.3",
    "slack-sdk>=3.27",
    "sqlalchemy>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "hypothesis>=6.100.0",
    "locust>=2.24.0",
    "mypy>=1.9.0",
    "ruff>=0.4.0",
    "black>=24.0",
    "pre-commit>=3.7.0",
    "alembic>=1.13.0",
]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.28.0",
]

[project.scripts]
my-agent = "agent:main"

[tool.ruff]
target-version = "py310"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "ERA", # eradicate
    "PL",  # pylint
    "TRY", # tryceratops
    "RUF", # ruff-specific
]
ignore = [
    "E501",  # line-too-long (handled by formatter)
    "TRY003", # long messages outside exception class
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "litellm.*",
    "chromadb.*",
    "duckduckgo_search.*",
    "feedparser.*",
    "git.*",
    "github.*",
    "tweepy.*",
    "pytesseract.*",
    "pdf2image.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "security: marks tests as security tests",
    "docker: marks tests requiring Docker",
    "postgres: marks tests requiring PostgreSQL",
    "e2e: marks tests as end-to-end web tests",
    "ux: marks UX/performance tests",
]

[tool.coverage.run]
source = ["core", "skills", "tools", "web"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
fail_under = 85

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
